chore: prevent overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -454,6 +454,7 @@ body {
     width: 399px;
     border-right: 1px solid lightgrey;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .vis-overview-panel table {
